# gibson-framework

./: .gitignore  .golangci.yml  .pre-commit-config.yaml  CLAUDE.md  Dockerfile.production  MANIFEST.in  Makefile  README.md  alembic.ini  go.mod  go.sum  main.go  pyproject.toml  pytest.ini  setup.py  tox.ini
.github/: dependabot.yml  release.yml
.github/workflows/: ci.yml  code-health.yml  nightly.yml  publish.yml  release.yml  schema-sync.yml  schema-validation.yml  test.yml
.schema_versions/: migration_history.json  versions.json
.spec-workflow/approvals/: davinci-plugin-approval.md
.spec-workflow/specs/: davinci-plugin-spec.md
.spec-workflow/steering/: product.md  structure.md  tech.md
alembic/: env.py
alembic/versions/: b31d140f6e3c_bulletproof_database_initial.py  c36b794df3bb_initial_consolidated_database_schema.py  df88a648bb7a_add_target_management_system.py  e2031ba7870c_add_targets_table.py
cmd/: console.go  credential.go  delete_commands_test.go  help.go  init.go  payload.go  payload_test.go  plugin.go  report.go  root.go  scan.go  status.go  target.go  version.go
cmd/examples/: disk_health_demo.go  health_command_integration.go
cmd/test/: credential_test.go
configs/: default.yaml
docs/: ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  DEPLOYMENT_PACKAGE_SUMMARY.md  DOCUMENTATION_UPDATE_SUMMARY.md  FEATURES.md  GETTING_STARTED.md  GIBSON_PLUGIN_SDK_SPEC.md  GIT_REPOSITORY_DOCUMENTATION_SUMMARY.md  GIT_REPOSITORY_USAGE.md  GIT_TESTING_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PAYLOAD_SYNCHRONIZER_IMPLEMENTATION.md  README.md  REPORT_UPDATE_SUMMARY.md  SECURITY_VALIDATION_REPORT.md  TROUBLESHOOTING.md  VALIDATION_REPORT.md  attack-taxonomy-architecture.md  auto-provider-urls.md  database-migration-guide.md  migration-conflict-analysis.md  payload-repository-structure.md  taxonomy-system.md
docs/.templates/: component-template.md  technical-debt-template.md  workflow-template.md
docs/commands/: payload_repository.md  target.md
docs/data-flow/: README.md
docs/technical-debt/: README.md
docs/workflows/: README.md  scan-workflow.md
examples/: auto_provider_urls_demo.go
gibson/: __init__.py  __main__.py  main.py
gibson/cli/: __init__.py  errors.py  output.py
gibson/config/: module_management.yaml
gibson/core/: ai.py  base.py  config.py  context.py
gibson/data/: default_sources.yaml
gibson/db/: __init__.py  base.py  manager.py
gibson/domains/: __init__.py  data.py  model.py  output.py  prompt.py  system.py
gibson/modules/: __init__.py
gibson/utils/: __init__.py  build_schemas.py  lazy_loader.py  payload_validator.py  schema_diff.py  schema_generator.py  schema_version.py
internal/audit/: audit.go
internal/config/: config.go  validation.go
internal/dao/: credential.go  factory.go  finding.go  migrations.go  payload.go  payload_dao_test.go  plugin_stats.go  plugin_stats_dao_test.go.bak  report.go  report_dao_test.go.bak  report_schedule.go  scan.go  target.go  types.go
internal/health/: health.go  health_test.go
internal/metrics/: metrics.go
internal/model/: credential.go  dispatcher.go  events.go  events_enhanced_test.go  events_test.go  types.go
internal/plugin/: manager.go  manager_integration_test.go  manager_test.go
internal/pool/: worker.go  worker_test.go
internal/providers/: integration_test.go  langchain_adapter.go  langchain_adapter_test.go  registry.go  registry_test.go
internal/ratelimit/: ratelimit.go
internal/security/: example_keystore_test.go  keystore.go  keystore_test.go  sanitize.go
internal/service/: factory.go  interfaces.go
internal/slogs/: slogs.go
internal/test/: helpers.go
internal/testutil/: db.go  jwt_helper.go
internal/ui/: types.go
internal/validation/: README.md  gibson.go  input.go  ratelimit.go  sanitize.go  validation_test.go
internal/view/: PLUGIN_IMPLEMENTATION.md  SCAN_INTEGRATION.md  console.go  credential.go  generic.go  help.go  payload.go  plugin.go  plugin_output.go  plugin_test.go  report.go  scan.go  scan_output.go  target.go  target_integration_test.go
internal/watch/: factory.go  factory_minimal.go  factory_minimal_test.go  factory_test.go  sync_test.go
migrations/: 20250824194246_82289041.sql
pkg/cli/: errors.go  errors_test.go
pkg/payloads/: sync.go
pkg/services/: README.md  git_auth.go  git_auth_README.md  git_auth_example.go  git_auth_integration.go  git_errors.go  git_errors_test.go  git_service.go  git_service_example_test.go  git_service_test.go  payload_repository_service.go  payload_sync.go  payload_sync_example.go  progress.go  progress_README.md  progress_cli_example.go  progress_integration_example.go  progress_test.go  repository_template_service.go  repository_template_service_test.go  results_organizer.go  scan_service.go  schema_validator.go  schema_validator_test.go
pkg/utils/: encryption.go
schemas/: .schema-version-cache.json  payload_schema.json
schemas/v1/: examples.json  payloadmodel.d.ts  payloadmodel.json  payloadmodel.md  payloadmodel.min.json
scripts/: backup.sh  gibson.rb.template  gibson.service  install.sh  migrate.sh  restore.sh  test-deployment.sh
testdata/test-payload-repo/: README.md
tests/: README.md  conftest.py  pytest.ini
tests/e2e/: cli_workflows_test.go  payload_repository_test.go  test_cli_sync_command.py  test_git_sync_e2e.py
tests/integration/: db_test.go  delete_positional_test.sh  gibson_fixes_test.go  git_operations_simple_test.go  git_operations_test.go  model_defaulting_test.go  payload_details_test.go  payload_execution_test.go  repository_template_test.go  service_test.go  test_database_cli.py  test_llm_adapter_integration.py  test_schema_sync_workflow.py  test_schema_workflow.py  test_target_management.py
(+266 files in other folders)
